--- a/config/database.yml
+++ b/config/database.yml
@@ -15,7 +15,7 @@
 # gem 'pg'
 #
 development:
-  adapter: postgresql
+  adapter: sqlite3
   encoding: unicode
   database: CDCollection_development
   pool: 5
@@ -43,14 +43,14 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: postgresql
+  adapter: sqlite3
   encoding: unicode
   database: CDCollection_test
   pool: 5
 
 
 production:
-  adapter: postgresql
+  adapter: sqlite3
   encoding: unicode
   database: CDCollection_production
   pool: 5
