--- a/config/database.yml
+++ b/config/database.yml
@@ -15,10 +15,12 @@
 # gem 'pg'
 #
 development:
-  adapter: sqlite3
-  encoding: unicode
-  database: CDCollection_development
-  pool: 5
+  adapter: mysql2
+  encoding: utf8
+  database: cdcollection
+  username: root
+  password: 
+  host: 127.0.0.1
 
 
   # Connect on a TCP socket. Omitted by default since the client uses a
@@ -42,16 +44,20 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
-  adapter: sqlite3
-  encoding: unicode
-  database: CDCollection_test
-  pool: 5
+development:
+  adapter: mysql2
+  encoding: utf8
+  database: cdcollection
+  username: root
+  password: 
+  host: 127.0.0.1
 
 
-production:
-  adapter: sqlite3
-  encoding: unicode
-  database: CDCollection_production
-  pool: 5
+development:
+  adapter: mysql2
+  encoding: utf8
+  database: cdcollection
+  username: root
+  password: 
+  host: 127.0.0.1
 
